--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -101,7 +101,47 @@ navbar
     background-size: 100% ;
 }
 
+.team_wrapper
+{
+    background: url('./svgs/blob_search.svg');
+    background-repeat: no-repeat;
+    background-position: 145% -5%;
+    background-size: 50% 50%;
+    background-attachment: fixed;
+}
 
+.typewriter h1 {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid #0f62fe; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .1em; /* Adjust as needed */
+    animation: 
+      typing 4.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: #0f62fe; }
+  }
+
+  a.social-icon
+  {
+      color: steelblue;
+  }
+
+  a.social-icon:hover
+  {
+    color: #0f62fe;
+  }
 
 .footer
 {
